# badge-maker-rs

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  build.rs
.config/: nextest.toml
.github/: dependabot.yml
.github/actions/update-compat-report-issue/: action.yml  index.js
.github/workflows/: check.yml  ci.yml  release.yml  shields-compatibility.yml
data/anafanafo/: README.md
docs/: style-previews.md
examples/: render_svg.rs  write_svg.rs
scripts/: update_compat_report_issue.js  update_compat_report_issue.py
src/: anafanafo.rs  badge_color.rs  css_color.rs  css_named_color.rs  lib.rs
src/render/: color.rs  for_the_badge.rs  layout.rs  mod.rs  social.rs  xml.rs
tests/: anafanafo_reference.rs  badge_maker_pixels.rs  badge_maker_reference.rs  css_variable_reference.rs  doc_style_previews.rs  public_api_contract.rs  reference_error_semantics.rs  svg_text_reference.rs  unicode_reference.rs
tests/cases/: badge_maker_reference.rs  docs_asset_consistency.rs  mod.rs  public_api_contract.rs  reference_error_semantics.rs  svg_text_reference.rs
tests/data/: anafanafo_cases.json  badge_maker_cases.json
tests/support/: batch_cases.rs  error_case.rs  mod.rs  options.rs  runner_core.rs  svg_case.rs
tools/anafanafo-ref/: README.md  index.js  package.json
tools/js-ref/: README.md  anafanafo.js  badge-maker.js  index.js  package.json
