[package]
name = "badge-maker-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bon = "3.9.1"
csscolorparser = "0.8.3"
thiserror = "2.0.18"

[dev-dependencies]
resvg = "0.47.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tiny-skia = "0.12.0"

[build-dependencies]
base64 = "0.22.1"
serde_json = "1.0.149"
