[package]
name = "badge-maker-rs"
version = "0.1.0"
edition = "2024"
description = "Rust badge renderer targeting Shields-compatible badge output"
license = "MIT"
repository = "https://github.com/DCjanus/badge-maker-rs"
keywords = ["badge", "svg", "shields", "rendering"]
rust-version = "1.85"
include = [
    "/LICENSE",
    "/build.rs",
    "/data/anafanafo/*.json",
    "/data/anafanafo/README.md",
    "/docs/style-previews/*.svg",
    "/examples/render_svg.rs",
    "/src/**",
]

[dependencies]
bon = "3.9.1"
thiserror = "2.0.18"

[dev-dependencies]
resvg = "0.47.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tiny-skia = "0.12.0"

[build-dependencies]
base64 = "0.22.1"
serde_json = "1.0.149"
